--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="assets/css/main.css">
-
+<link href='http://fonts.googleapis.com/css?family=Gafata' rel='stylesheet' type='text/css'>
 <script src="assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
@@ -28,6 +28,7 @@
 	<!-- Main jumbotron for a primary marketing message or call to action -->
 	<script src="assets/js/vendor/d3.v3.min.js" charset="utf-8"></script>
 	<script src="assets/js/vendor/jquery-1.11.0.min.js" charset="utf-8"></script>
+	<script src="assets/js/vendor/bootstrap.min.js" charset="utf-8"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
